# pytreeclass

./: .coverage  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGLOG.md  LICENSE  PyTreeClass_benchmarks.ipynb  README.md  benchmarking.ipynb  codecov.yml  pyproject.toml  pytreeclass_examples.ipynb  readme.ipynb  readthedocs.yaml  setup.py
.github/workflows/: docs.yml  pypi.yml  test_default.yml  test_jax.yml  test_numpy.yml  test_torch.yml  tests.yml
.trunk/: logs  trunk.yaml
.trunk/plugins/: trunk
assets/: benchmark_flatten_unflatten.ipynb  benchmark_nn_training_equinox.ipynb  benchmark_nn_training_flax.ipynb  intro.ipynb  test_box.txt  test_diagram.txt  test_mermaid_html.html
docs/: conf.py  index.rst  requirements.txt
docs/API/: advanced_api.rst  base.rst  core.rst  masking.rst  pretty_print.rst  (+4 more)
expertimental/: container.py  param.py  test_param.py
pytreeclass/: __init__.py  container.py  decorator.py  tree_util.py  treeclass.py
requirements/: requirements.txt
tests/: __init__.py  test_box.txt  test_container.py  test_dataclass_util.py  test_decorator.py  test_decorator_util.py  test_diagram.txt  test_field_validator.py  test_freezing.py  test_freezing_jit.py  test_index.py  test_indexing.py  test_jax_jit.py  test_mask.py  test_mask_util.py  test_mermaid_html.html  test_mermaid_md.md  test_misc.py  test_nn.py  test_node.py  test_op.py  test_operator.py  test_ops_under_jit.py  test_param.py  test_pprint.py  test_register_node.py  test_static.py  test_summary.txt  test_summary_md.md  test_tree_filter.py  test_tree_freeze.py  test_tree_index.py  test_tree_mask_util.py  test_tree_operator.py  test_tree_pprint.py  test_tree_repr_str.py  test_tree_util.py  test_tree_viz.py  test_tree_viz_util.py  test_treeclass.py  (+4 more)
(+75 files in other folders)
